html added to contact and portfolio files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-		
+
 	</head>
 
 	<body>
@@ -41,12 +41,14 @@
 
 				<img src="assets/images/me.jpg" id="myimage">
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pretium condimentum convallis. Maecenas enim nisl, varius id erat vitae, vestibulum dapibus velit. Aenean at enim nulla. Morbi lacinia tortor quis ante euismod, non sagittis nibh sagittis. Suspendisse eget tempus lacus, eget tempus ligula. Morbi hendrerit ultrices vulputate. Donec aliquam, turpis sed aliquam dictum, nisi tellus lobortis urna, nec sagittis elit urna non ipsum. Phasellus ac consectetur leo. Praesent aliquam metus ante, quis porta nisi ornare laoreet. Nam dapibus tincidunt ligula, eget volutpat dui cursus vitae. In eu imperdiet tortor, nec sollicitudin elit.</p>
+				<p>Morbi non quam lectus. Pellentesque neque augue, suscipit at erat sed, pellentesque facilisis velit. Duis nec porttitor eros, sit amet eleifend nisi. Nam accumsan aliquet egestas. In at elit eu ante fringilla vulputate a sed mauris. Integer arcu tortor, elementum et massa at, rutrum dapibus enim. Sed viverra nibh id mi condimentum vulputate. Etiam auctor eros sem, non molestie ante vestibulum maximus. Proin interdum pharetra imperdiet. Aenean tincidunt libero nec gravida viverra. Maecenas a diam efficitur, semper magna eget, fringilla mauris. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras dapibus sapien vitae nisl rhoncus efficitur. Pellentesque fringilla mi at euismod iaculis. Mauris ultrices massa tempus, suscipit ante quis, molestie libero.
+
+				Nam nec vulputate sem, viverra interdum mi. Aliquam vestibulum rutrum nisi at scelerisque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id aliquet lacus. Nunc non massa sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus mi elit, ut molestie urna rutrum eget. Nullam sollicitudin elementum urna, sed aliquet augue blandit vel. Cras a eleifend massa. Ut porta metus justo, ut laoreet ipsum cursus ut. Nulla laoreet congue sem, id iaculis metus.</p>
 			</section>
 
 		
 			<!--Social connect section-->
-			<section id="Connect">
+			<section id="connect">
 				<div class="title">
 					<h3> Connect with me</h3>
 				</div>
@@ -63,7 +65,7 @@
 			</section>
 		</div>
 
-		
+		s
 		<!--Footer-->
 		<div id="footer">
 			<h4>@copyright 2016 Alisa Schink</h4>
