contact page and navagation bar updated

--- a/index.html
+++ b/index.html
@@ -13,24 +13,13 @@
 			<h1> Alisa Schink</h1>
 		</header>
 
-		<!--About button-->
-
-		<div class="links">
-			<p class="tabs">About</p>
-		</div>
-
-
-		<!--contact button -->
-
-		<div class="links">
-			<p class="tabs">Contact</p>
-		</div>
+		<!--Navbar-->
+		<ul id="navbar">
+			<li><a href="index.html">About</a></li>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+		</ul>
 		
-		
-		<!--portfolio button-->
-		<div class="links">
-			<p class="tabs">Portfolio</p>
-		</div>
 
 		<!--About me section-->
 		<div id="maincontent">
@@ -65,7 +54,7 @@
 			</section>
 		</div>
 
-		s
+		
 		<!--Footer-->
 		<div id="footer">
 			<h4>@copyright 2016 Alisa Schink</h4>
