--- a/portfolio.html
+++ b/portfolio.html
@@ -13,25 +13,15 @@
 			<h1> Alisa Schink</h1>
 		</header>
 
-		<!--About button-->
-
-		<div class="links">
-			<p class="tabs">About</p>
-		</div>
-
-
-		<!--contact button -->
-
-		<div class="links">
-			<p class="tabs">Contact</p>
-		</div>
 		
-		
-		<!--portfolio button-->
-		<div class="links">
-			<p class="tabs">Portfolio</p>
-		</div>
+		<!--Navbar-->
+		<ul id="navbar">
+			<li><a href="index.html">About</a></li>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+		</ul>
 
+		
 		<!--About me section-->
 		<div id="maincontent">
 			<section id="mainbody">
