html and css updated for potforlio page and navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,23 +21,60 @@
 			<li><a href="portfolio.html">Portfolio</a></li>
 		</ul>
 
-		
+
 		<!--About me section-->
 		<div id="maincontent">
 			<section id="mainbody">
+			
 				<div class="title">
 					<h2> Portfolio</h2>
 				</div>
 
-				<img src="assets/images/download.jpg" class="portfolioimage">
+				
+				<div class=" block" id="block1">
+					<a href="#">
+						<img src="assets/images/download.jpg" class="portfolioimage" >
 
-				<img src="assets/images/download (1).jpg" class="portfolioimage">
+						<h2 class="banner">Project 1</h2>
+					</a>
+					
+				</div>
 
-				<img src="assets/images/download (2).jpg" class="portfolioimage">
+				<div class="block" id="block2">
+					<a href="#">
+						<img src="assets/images/download (1).jpg" class="portfolioimage">
 
-				<img src="assets/images/download (3).jpg" class="portfolioimage">
+						<h2 class="banner">Project 2</h2>
+					</a>
 
-				<img src="assets/images/download (4).jpg" class="portfolioimage">
+				</div>
+
+				<div class="block" id="block3">
+					<a href="#">
+						<img src="assets/images/download (2).jpg" class="portfolioimage">
+
+						<h2 class="banner">Project 3</h2>
+					</a>
+
+				</div>
+
+				<div class="block" id="block4">
+					<a href="#">
+						<img src="assets/images/download (3).jpg" class="portfolioimage">
+
+						<h2 class="banner">Project 4</h2>
+					</a>
+
+				</div>
+
+				<div class="block" id="block5">
+					<a href="#">
+						<img src="assets/images/download (5).jpg" class="portfolioimage">
+
+						<h2 class="banner">Project 5</h2>
+					</a>
+
+				</div>
 
 			</section>
 
