--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
 
 				<p>Morbi non quam lectus. Pellentesque neque augue, suscipit at erat sed, pellentesque facilisis velit. Duis nec porttitor eros, sit amet eleifend nisi. Nam accumsan aliquet egestas. In at elit eu ante fringilla vulputate a sed mauris. Integer arcu tortor, elementum et massa at, rutrum dapibus enim. Sed viverra nibh id mi condimentum vulputate. Etiam auctor eros sem, non molestie ante vestibulum maximus. Proin interdum pharetra imperdiet. Aenean tincidunt libero nec gravida viverra. Maecenas a diam efficitur, semper magna eget, fringilla mauris. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras dapibus sapien vitae nisl rhoncus efficitur. Pellentesque fringilla mi at euismod iaculis. Mauris ultrices massa tempus, suscipit ante quis, molestie libero.
 
-				Nam nec vulputate sem, viverra interdum mi. Aliquam vestibulum rutrum nisi at scelerisque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id aliquet lacus. Nunc non massa sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus mi elit, ut molestie urna rutrum eget. Nullam sollicitudin elementum urna, sed aliquet augue blandit vel. Cras a eleifend massa. Ut porta metus justo, ut laoreet ipsum cursus ut. Nulla laoreet congue sem, id iaculis metus.</p>
+				<br>
+
+				Nam nec vulputate sem, viverra interdum mi. Aliquam vestibulum rutrum nisi at scelerisque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id aliquet lacus. Nunc non massa sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rhoncus mi elit, ut molestie urna rutrum eget. Nullam sollicitudin elementum urna, sed aliquet augue blandit vel. Cras a eleifend massa. Ut porta metus justo, ut laoreet ipsum cursus ut. Nulla laoreet congue sem, id iaculis metus.
+
+				<br>
+
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras placerat eros ut tellus dignissim fringilla. In efficitur faucibus egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur ultrices, odio eu vehicula blandit, elit sapien maximus dolor, in consequat diam magna ac elit. Fusce eu erat convallis, imperdiet mauris in, rhoncus dolor. Pellentesque lacinia fringilla leo, id imperdiet purus. Nunc eu hendrerit nisl. Aliquam erat volutpat. Vestibulum eget scelerisque metus. Integer vel est vel augue ultricies fringilla. Maecenas metus risus, elementum non tellus at, venenatis vehicula libero.</p>
 			</section>
 
 		
