background image for pages and headers updated

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 			<!--Social connect section-->
 			<section id="connect">
 				<div class="title">
-					<h3> Connect with me</h3>
+					<h3> Connect with Me</h3>
 				</div>
 
 			<a href="https://github.com/alisaschink/">
